--- a/data/exploratory_data_analysis.ipynb
+++ b/data/exploratory_data_analysis.ipynb
@@ -2017,7 +2017,7 @@
    "source": [
     "from sklearn.cluster import KMeans\n",
     "kmeans = KMeans(n_clusters=3, max_iter=1000, tol=1e-6)\n",
-    "prediction = model.fit_predict(RGB_intensities)\n",
+    "prediction = kmeans.fit_predict(RGB_intensities)\n",
     "colors = [['r', 'g', 'b'][i] for i in prediction]\n",
     "fig = plt.figure()\n",
     "ax = plt.axes(projection='3d')\n",
